fix: update POM (remove custom compiler, bump Lombok), default role in User, and tests